# nss_switch_localsinglename_plugin_rs

./: Cargo.toml  README.md  install.sh
src/: lib.rs
